# Python-finance-buddy

./: .gitignore  Makefile  Pipfile  README.md  notes.txt  pyproject.toml  setup.py
data/: model.pkl  train-data.py  training-categories.json  vectorizer.pkl
finance_buddy/: __init__.py  capital_one.py  classification.py  cli.py  utils.py
src/data/: model.pkl  training-categories.json  vectorizer.pkl
src/finance_buddy/: __init__.py  capital_one.py  classification.py  cli.py
