[tool.poetry]
name = "python-finance-buddy"
version = "0.1.8"
description = "A toolkit for financial calculations and analysis"
authors = ["Michael DeGuzis <mdeguzis@gmail.com>"]
readme = "README.md"
packages = [{include = "finance_buddy", from = "src"}]

[tool.poetry.dependencies]
python = ">3.8.1"
numpy = "^1.20"
pandas = "^1.2"
matplotlib = "^3.4"
pdfplumber = "*"
scikit-learn = "^1.1.0"
fuzzywuzzy = "*"
selenium = "*"
python-Levenshtein = "*"
reportlab = "*"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.poetry.scripts]
finance-buddy = "finance_buddy.cli:main"